قثrefact: removing the toolbar from the main activiy of the app and added a toolbar for every fragment.

--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -7,20 +7,24 @@
     android:fitsSystemWindows="true"
     tools:context=".ui.fragments.editnote.EditNoteFragment">
 
-        <ScrollView
-            android:id="@+id/scroll_view"
+        <include android:id="@+id/edit_fragment_toolbar"
+            layout="@layout/layout_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ScrollView android:id="@+id/scroll_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/edit_fragment_toolbar">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    >
+                    android:layout_height="0dp">
 
                         <androidx.constraintlayout.widget.Guideline
                             android:id="@+id/guideline"
@@ -93,10 +97,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
-                            tools:text="07:30 AM"
                             app:layout_constraintBottom_toBottomOf="@+id/tv_date"
                             app:layout_constraintStart_toEndOf="@+id/tv_date"
-                            app:layout_constraintTop_toTopOf="@+id/tv_date" />
+                            app:layout_constraintTop_toTopOf="@+id/tv_date"
+                            tools:text="07:30 AM" />
 
                         <View
                             android:id="@+id/view"
@@ -113,13 +117,13 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="16dp"
-                            tools:text="0 characters"
                             app:layout_constraintBottom_toBottomOf="@+id/view"
                             app:layout_constraintEnd_toStartOf="@+id/guideline4"
                             app:layout_constraintHorizontal_bias="0.08"
                             app:layout_constraintStart_toEndOf="@+id/view"
                             app:layout_constraintTop_toTopOf="@+id/view"
-                            app:layout_constraintVertical_bias="0.5" />
+                            app:layout_constraintVertical_bias="0.5"
+                            tools:text="0 characters" />
 
                         <ImageView
                             android:id="@+id/iv_note_image"
@@ -129,8 +133,8 @@
                             android:layout_marginTop="10dp"
                             android:layout_marginEnd="2dp"
                             android:layout_marginBottom="10dp"
-                            android:scaleType="fitCenter"
                             android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
                             android:visibility="gone"
                             app:layout_constraintBottom_toTopOf="@+id/tv_note_attached_link"
                             app:layout_constraintEnd_toStartOf="@+id/guideline4"
