--- a/app/src/main/res/drawable/ic_time.xml
+++ b/app/src/main/res/drawable/ic_time.xml
@@ -1,9 +1,9 @@
 <vector android:height="20dp" android:viewportHeight="24"
     android:viewportWidth="24" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillAlpha="0.24" android:fillColor="#2A4157"
+    <path android:fillAlpha="0.0" android:fillColor="#000000"
         android:pathData="M12,12m-8.6,0a8.6,8.6 0,1 1,17.2 0a8.6,8.6 0,1 1,-17.2 0"
-        android:strokeColor="#222222" android:strokeWidth="1.2"/>
+        android:strokeColor="@color/orange" android:strokeWidth="1.2"/>
     <path android:fillColor="#00000000"
         android:pathData="M16.5,12H12.25C12.112,12 12,11.888 12,11.75V8.5"
-        android:strokeColor="#222222" android:strokeLineCap="round" android:strokeWidth="1.2"/>
+        android:strokeColor="@color/orange" android:strokeLineCap="round" android:strokeWidth="1.2"/>
 </vector>
